# github-rest-app

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/ada/: github.py  main.py
src/ada/models/: output.py
tests/: test_github.py  test_main.py
