[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.poetry]
name = "ada_app"
version = "0.1.0"
description = "ADA recruitment task"
authors = ["Grzegorz Herud <gheru@softserveinc.com>"]
readme = "README.md"
packages = [
    { include = "ada", from = "src" }
]

[tool.poetry.dependencies]
aioredis = "^2.0.1"
fastapi = "^0.111.0"
httpx = "^0.27.0"
pydantic = "^2.7.1"
python = "^3.10"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
ada = "ada.main:main"

[tool.pytest.ini_options]
addopts = ["-vv", "-s"]
